refactor flux bailleur